manifests/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: jellyfin
    labels:
        name: jellyfin
        app: jellyfin
